Worked on index page.  Got testimonials and licensed categories built and tested for mobile displays.

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/bootstrap-slider.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/bootstrap-slider.liquid
@@ -25,7 +25,7 @@
             {% capture slide_alt %}slide_{{ i }}_alt{% endcapture %}
             {% if settings[slide] %}
             {% if i == 1 %}
-            <div class="active item">
+            <div class="active item fill">
                 {% else %}
                 <div class="item fill">
                         {% endif %}
