--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
@@ -1,4 +1,7 @@
 {% include 'bootstrap-slider' %}
+{% include 'home-page-callout' %}
+{% include 'home-page-testimonials' %}
+{% include 'home-page-licensed-categories' %}
 
 <div id="promotion-banners-1" style="text-align: center;">
 </div>
