--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
@@ -89,3 +89,68 @@
   background: #fff;
   margin: 0 3px;
 }
+
+.callout {
+    background-color: #d1d1d1;
+    padding: 30px 30px;
+}
+
+.testimonials {
+    background-color: #fff;
+    padding: 30px 30px;
+}
+
+.testimonial-badge {
+    height: 100%;
+    width:100%;
+    display: block;
+    background-size: 100%;
+    background-size: cover;
+    background-position: center center;
+    vertical-align: top;
+}
+
+
+.box-huge {
+  width: 275px !important;
+}
+
+.box-round, .box-rect, .box-square, .box-hex {
+  display: block;
+  margin-bottom: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  max-width: 100%;
+  position: relative;
+  text-align: center;
+  width: 200px;
+  z-index: 100;
+}
+
+
+
+
+.box-dummy {
+  padding-top: 100%;
+}
+
+.box-round .box-inner {
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+
+.box-inner {
+  height: 100%;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+
+
