Continued working on Index page

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
@@ -1,4 +1,9 @@
-﻿.carousel, .item, .active {
+﻿// Site Footer
+$colorFooterBg: {{ settings.color_footer_bg }};
+$colorFooterText: {{ settings.color_footer_text }};
+
+
+.carousel, .item, .active {
     height: 100%;
 }
 
@@ -91,7 +96,7 @@
 }
 
 .callout {
-    background-color: #d1d1d1;
+    background-color: $colorFooterBg;
     padding: 30px 30px;
 }
 
