--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
@@ -15,8 +15,8 @@
 {% endunless %}
 
 {% if settings.home_featured_collections_enable %}
-  <div class="section-header inner-wrapper" >
-    <h2 class="h1 section-header--left">{{ 'homepage.featured_collections.heading' | t }}</h2>
+  <div class="section-header inner-wrapper" style="padding-top:20px;" >
+      <h2 class="h1 section-header--left">{{ 'homepage.featured_collections.heading' | t }}</h2>
     <div class="section-header--right">
       <a href="/collections">{{ 'homepage.featured_collections.more_categories' | t }} &rsaquo;</a>
     </div>
