Continued working on the 'select' theme.

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/default.scss.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/default.scss.liquid
@@ -2067,12 +2067,12 @@ $shareBorderColor: #ececec;
   #Site Header
 ==============================================================================*/
 .site-header {
-  padding: $gutter/2 0;
+  /*padding: $gutter/2 0;*/
   background-color: $headerBackground;
   color: $headerText;
 
   @include at-query ($min, $large) {
-    padding: $gutter 0;
+   /* padding: $gutter 0;*/
   }
 
   .site-header--text-links a {
