--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/top-header.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/top-header.liquid
@@ -1,4 +1,54 @@
 ﻿<div class="head-top">
     <div class="inner-wrapper">
+        <div class="row">
+            <div class="col-md-6">
+                <ul class="inline-list social-icons">
+                    {% if settings.social_twitter_link != blank %}
+                    <li>
+                        <a class="icon-fallback-text" href="{{ settings.social_twitter_link }}" title="{{ 'layout.footer.store_on_social_network' | t: store_name: shop.name, social_network: 'Twitter' | escape }}">
+                            <span class="icon icon-twitter" aria-hidden="true"></span>
+                            <span class="fallback-text">Twitter</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if settings.social_facebook_link != blank %}
+                    <li>
+                        <a class="icon-fallback-text" href="{{ settings.social_facebook_link }}" title="{{ 'layout.footer.store_on_social_network' | t: store_name: shop.name, social_network: 'Facebook' | escape }}">
+                            <span class="icon icon-facebook" aria-hidden="true"></span>
+                            <span class="fallback-text">Facebook</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if settings.social_pinterest_link != blank %}
+                    <li>
+                        <a class="icon-fallback-text" href="{{ settings.social_pinterest_link }}" title="{{ 'layout.footer.store_on_social_network' | t: store_name: shop.name, social_network: 'Pinterest' | escape }}">
+                            <span class="icon icon-pinterest" aria-hidden="true"></span>
+                            <span class="fallback-text">Pinterest</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if settings.social_google_plus_link != blank %}
+                    <li>
+                        <a class="icon-fallback-text" href="{{ settings.social_google_plus_link }} title="{{ 'layout.footer.store_on_social_network' | t: store_name: shop.name, social_network: 'Google+' | escape }}">
+                            <span class="icon icon-google" aria-hidden="true"></span>
+                            <span class="fallback-text">Google+</span>
+                        </a>
+                    </li>
+                    {% endif %}
+
+                    
+</div>
+            <div class="col-md-6">
+                {% for link in linklists[settings.header_linklist].links %}
+                <span class="header-link"><a  href="{{ link.url }}">{{ link.title }}</a>&nbsp;</span>
+                {% else %}
+                {% capture theme_settings_footer_linklist_path %}
+                <strong>Footer</strong> >
+                <strong>Quick links link list</strong>{% endcapture %}
+                {{ 'layout.footer.instructions_for_linklist_html' | t: theme_settings_link: theme_settings_link, theme_settings_footer_linklist_path: theme_settings_footer_linklist_path }}
+                {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
