--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/templates/index.liquid
@@ -1,4 +1,4 @@
-{% include 'bootstrap-slider' %}
+{% include 'home-slider' %}
 {% include 'home-page-callout' %}
 {% include 'home-page-testimonials' %}
 {% include 'home-page-licensed-categories' %}
