Added support for sending email from contact page to business owners.

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/assets/bootstrap.scss.liquid
@@ -2,6 +2,24 @@
 $colorFooterBg: {{ settings.color_footer_bg }};
 $colorFooterText: {{ settings.color_footer_text }};
 
+
+h1, h2, h3, h4, h5 {
+  color: #fff;
+}
+
+h1 {
+    font-size: 72px;
+}
+
+
+.well {
+    background: #5cb85c;
+}
+
+.thank-you {
+    padding: 10px 10px;
+}
+
 .align-left {
   display: inline;
   float: left;
