Updated to reflect files currently deployed to azure

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-page-licensed-categories.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-page-licensed-categories.liquid
@@ -14,7 +14,9 @@
             <div class="col-md-10">
                 <p style="text-align: center;">
                     {% capture hendrix_img %}drum-displays-hendrix-2.jpg{% endcapture %}
-                    <img src="{{ hendrix_img | asset_url }} alt=" college displays" style="width:100%">
+                        <a href="/jimi-hendrix">
+                    <img src="{{ hendrix_img | asset_url }}" alt=" college displays" style="width:100%">
+					</a>
                 </p>
             </div>
             <div class="col-md-1"></div>
