--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-page-testimonials.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-page-testimonials.liquid
@@ -1,7 +1,7 @@
-﻿<div class="testimonials">
+<div class="testimonials">
     <div class="container">
-        <div class="row">
-            <div class="col-md-1"></div>
+        <div class="row" >
+          <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img class="img-circle" draggable="false" src="{{'ray-luzier-korn-drum-heads.jpg' | asset_url}}" alt="Ray Luzier" width="200" height="200">
             </div>
@@ -10,9 +10,9 @@
                 <p><strong>– Ray Luzier, KoRn, KXM</strong></p>
             </div>
         </div>
-        <br />
-        <div class="row">
-            <div class="col-md-1"></div>
+        <br/>
+        <div class="row" >
+          <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img class="img-circle" draggable="false" src="{{'eddie_trunk.jpg' | asset_url }}" alt="Eddie Trunk" width="200" height="200">
             </div>
