--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-slider.liquid
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/snippets/home-slider.liquid
@@ -1,7 +1,5 @@
 {% if settings.slider_home_enable %}
 
-
-
 <div id="homeCarousel" class="carousel slide carousel-fade" style="" data-ride="carousel">
     <ol class="carousel-indicators">
 
@@ -22,7 +20,7 @@
             <div class="container">
                 <div class="carousel-caption carousel-caption-lower-right">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col=md-4">
                             <a href="/mayhem-festival" class="btn btn-xlarge" data-animation="animated zoomInRight">View Products</a>
                         </div>
                         <div class="col=md-8"></div>
@@ -39,16 +37,16 @@
 
         </a>
         <div class="container">
-            <div class="carousel-caption">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6">
-                        <h3>BE SEAHAWKS PROUD</h3>
-                        <h1>12th MAN</h1>
+            <div class="carousel-caption carousel-caption-upper-left">
+                <div class="row" style="width:300px">
+                    <div class="col=md-4">
+                        <div class="large">BE SEAHAWKS PROUD</div>
+                        <div class="x-large">12th MAN</div>
                         <a href="/football/hawks-012" class="btn btn-xlarge" data-animation="animated zoomInRight">Buy Now</a>
                     </div>
-
+                    <div class="col=md-8"></div>
                 </div>
-
+               
             </div>
         </div>
     </div>
