--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/templates/index.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/templates/index.liquid
@@ -1,5 +1,5 @@
 {% include 'body/heroarea' %} 
-<div class="container">
+<div class="content-container">
 {% include 'body/mommybuzz' %} 
 {% include 'body/sleeptalk' %} 
 {% include 'body/featuredvideo' %} 
