--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/emailsignup.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/emailsignup.liquid
@@ -1,2 +1,9 @@
 <section id="emailsignup">
+  <img src="{{ 'email-icon.png' | asset_url }}" alt="Email icon" />
+  <div class="headline1 purple">Join the Club</div>
+  <div class="subheadline">Stay Connected with our Email Newsletter</div>
+  <form action="/subscribe" method="get" class="subscribe-form" role="subscribe">
+    <input name="email" type="email" id="email-field" placeholder="youremail@address.com" />
+    <input type="submit" id="subscribe-submit-button" class="button" value="Submit" />
+  </form>
 </section>
