--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/sleeptalk.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/sleeptalk.liquid
@@ -1,3 +1,24 @@
 <section id="sleeptalk">
   <h2>Sleep Talk</h2>
+  <div class="row imagetriad">
+    <div class="column">
+      <div class="imagecaption">
+        <h3>Image Title</h3>
+        <h5>Detail subtext here</h5>
+      </div>
+    </div>
+    <div class="column">
+      <div class="imagecaption">
+        <h3>Image Title</h3>
+        <h5>Detail subtext here</h5>
+      </div>
+    </div>
+    <div class="column">
+      <img src="{{ '340x204imageFPO.jpg' | asset_url }}" alt="Sample image" />
+      <div class="imagecaption">
+        <h3 class="white">Image Title</h3>
+        <h5>Detail subtext here</h5>
+      </div>
+    </div>
+  </div>
 </section>
