Updates to Featuring, Headlines, Mommy Buzz sections

--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/headlines.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/headlines.liquid
@@ -1,3 +1,22 @@
 <section id="headlines">
-
+  <div class="adunit-tall"></div>
+  <div class="content">
+	<div class="headline">
+	  <div class="thumbnail left"></div>
+	  <h3>Headline One</h3>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu bibendum augue, ornare congue nunc. Sed sit amet facilisis eros. Curabitur et tincidunt tellus. Morbi convallis ante at hendrerit vestibulum. Praesent interdum lacinia leo, tempor pulvinar urna consequat nec. Nulla tempus dolor sit amet massa pretium, malesuada laoreet justo sagittis. Etiam aliquet mi sed eros consequat, vulputate aliquet justo facilisis. Nunc in orci vitae dui tincidunt dictum a quis purus.</p>
+	</div>
+	<hr/>
+	<div class="headline">
+	  <div class="thumbnail left"></div>
+	  <h3>Headline Two</h3>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu bibendum augue, ornare congue nunc. Sed sit amet facilisis eros. Curabitur et tincidunt tellus. Morbi convallis ante at hendrerit vestibulum. Praesent interdum lacinia leo, tempor pulvinar urna consequat nec. Nulla tempus dolor sit amet massa pretium, malesuada laoreet justo sagittis. Etiam aliquet mi sed eros consequat, vulputate aliquet justo facilisis. Nunc in orci vitae dui tincidunt dictum a quis purus.</p>
+	</div>
+	<hr/>
+	<div class="headline">
+	  <div class="thumbnail left"></div>
+	  <h3>Headline Three</h3>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu bibendum augue, ornare congue nunc. Sed sit amet facilisis eros. Curabitur et tincidunt tellus. Morbi convallis ante at hendrerit vestibulum. Praesent interdum lacinia leo, tempor pulvinar urna consequat nec. Nulla tempus dolor sit amet massa pretium, malesuada laoreet justo sagittis. Etiam aliquet mi sed eros consequat, vulputate aliquet justo facilisis. Nunc in orci vitae dui tincidunt dictum a quis purus.</p>
+	</div>
+  </div>
 </section>
