--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/mommybuzz.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/body/mommybuzz.liquid
@@ -2,12 +2,21 @@
   <h2>Mommy Buzz</h2>
   <div class="row indented">
     <div class="column half">
-	  <div class="thumbnail left"></div>
-  	  <h5>Best seat ever!</h5>
+	    <div class="thumbnail left"></div>
+      <div class="content contentleft">
+        <div class="borderedcontent">
+  	      <h5>Best seat ever!</h5>
+          <p>I'm excited to not have to get another booster seat since this car seat grows with my child.</p>
+        </div>
+        <p class="textlink">Read Reviews</p>
+      </div>
     </div>
     <div class="column half">
-	  <div class="thumbnail right"></div>
-  	  <h5>Lorem ipsum</h5>
+	    <div class="thumbnail right"></div>
+      <div class="content contentright">
+        <p class="headline3">"Lorem ipsum dolor sit amet, consectetur adipsicing elit?"</p>
+  	    <p class="textlink">Learn How</p>
+      </div>
     </div>
   </div>
   <div class="row bookpromo">
