--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/assets/style.scss.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/assets/style.scss.liquid
@@ -1304,6 +1304,33 @@ nav#footer-links li {
   }
 }
 
+#mommybuzz {
+  .column {
+    position: relative;
+    min-height: 150px;
+    .content {
+      position: absolute;
+      bottom: 0;
+      width: 320px;
+    }
+    .borderedcontent {
+      border-right: 1px solid lightgray;
+    }
+    .contentleft {
+      left: 175px;
+    }
+    .contentright {
+      left: 25px;
+    }
+  }
+  h5 { 
+    margin-bottom: 0; 
+  }
+  p {
+    padding-bottom: 10px;
+  }
+}
+
 .bookpromo {
   margin-top: 25px;
   .bookimage {
@@ -1390,6 +1417,44 @@ nav#footer-links li {
   }
 }
 
+#headlines {
+  margin-top:50px;
+  min-height: 650px;
+  .content {
+    width: 720px;
+  }
+  .headline {
+    min-height: 150px;
+  }
+  .thumbnail {
+    margin-right: 30px;
+  }
+  h3 {
+    text-align: left;
+    margin-bottom: 5px;
+  }
+  hr {
+    margin: 40px 0
+  }
+}
+
+#featuring {
+  margin-bottom: 50px;
+  .slider {
+    width: 100%;
+    height: 650px;
+    border: 1px solid black;
+    @include white-bg;
+  }
+}
+
+.adunit-tall {
+  width: 350px;
+  height: 650px;
+  @include white-bg;
+  float: right;
+}
+
 /* ===================================
    Babywise-specific style overrides
    =================================== */
@@ -1419,7 +1484,7 @@ h2 {
   height: 154px;
   width: 154px;
   background-color: transparent;
-  border: 1px solid black;
+  border: 1px solid #666666;
 }
 
 button, .button {
