--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/header/navarea-hamburger.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/header/navarea-hamburger.liquid
@@ -1,4 +1,5 @@
 {% if settings.navarea_hamburger_show %}
 <div class="hamburger-nav">
+  {% include 'header/navarea-nav', menu_linklist: 'hamburger-menu', footer_linklist: 'footer' %}
 </div>
 {% endif %}
