--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/header/navarea.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/snippets/header/navarea.liquid
@@ -4,5 +4,7 @@
   <a href="{{ shop.url }}"><div class="logo"></div></a>
   {% include 'header/navarea-signin' %}
   {% include 'header/navarea-search' %}
-  {% include 'header/navarea-nav' %}
+  <div class="primarynav">
+  {% include 'header/navarea-nav', menu_linklist: 'main-menu' %}
+  </div>
 </div>
